Refactoring errors returned by endpoint, making more tests
